# pxrd-diff

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_explore_data.ipynb
paper/: _pandoc_header.tex  build.sh  diffpxrd_pearsons.txt  make_figures.py  paper.docx  paper.md  paper.tex  references.bib  training_curves.txt
paper/phase13_results/: README.md
paper/phase4_results/: baseline_single.json  phase4_1_ensemble.json  phase4_2_ensemble_refine.json
paper/phase5_results/: aux_lat_baseline.json  aux_lat_phase4.json
paper/phase5b6_results/: p5b_baseline.json  p5b_phase4.json  p5b_sg_baseline.json  p5b_sg_phase4.json
paper/phase5c_results/: p5c_baseline.json  p5c_phase4.json  p5c_sg_baseline.json  p5c_sg_phase4.json
paper/phase5d_results/: p5d_baseline.json  p5d_phase4.json  p5d_sg_baseline.json  p5d_sg_phase4.json
paper/phase7_results/: v18_on_clean.json  v18_on_noisy.json  v19_on_clean.json  v19_on_noisy.json
paper/phase9_results/: baseline_diffractgpt_n1000.json  p9_2_gs0.0.json  (+21 more)
scripts/: 00_pull_full_mp.py  00_pull_mp20.py  01_simulate_pxrd.py  02_train.py  03_sample.py  04_verify_debye.py  05_compare_ablation.py  06_paper_plots.py  09_index_benchmark.py  09a_make_perturbed_cells.py  09b_index_robustness.py  10_diffractgpt_eval.py  10_pxrdnet_eval.py  run_phase12_multiseed.sh  run_phase4_eval.sh  run_phase5_eval.sh  run_phase5b6_eval.sh  run_phase5c_eval.sh  run_phase5d_eval.sh  run_phase7_eval.sh  stats_ci.py
tasks/: lessons.md  todo.md
tests/: test_augment.py  test_eval_smoke.py  test_lat_head.py  test_sampler_phase4.py
(+86 files in other folders)
